# ai-foundations

./: pyproject.toml
exercises/: bigO_demo.py  comprehensions.py  day02_exercises.py  day03_demo.py  explore_objects.py  generators.py
src/ai_foundations/: __init__.py  utils.py
