[project]
name = "ai-foundations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jayaprakash Sadhanala", email = "jaysadhanala.0511@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
ai-foundations = "ai_foundations:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.19",
]
